<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity5">

    <!--  TOP BAR  -->
...
    <!--  SCROLLABLE   -->
    <ScrollView
        android:id="@+id/feedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        android:layout_above="@id/bottombar"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingBottom="80dp">

        <RelativeLayout
            android:id="@+id/scroll_content"
...
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/home__filled_" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/home"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="16dp"
...
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:src="@drawable/create" />

        <ImageView
            android:id="@+id/notifs"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/post"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="16dp"
...
