<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logininterface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity3">

    <!-- Scrollable content -->
    <ScrollView
        android:id="@+id/login_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingBottom="24dp">

<!--        main content-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilepic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:src="@drawable/img_3" />

            <TextView
                android:id="@+id/profilename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profilepic"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:text="jacob_w"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--login button, if i make it rectangle, cant change its color-->

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/profilename"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#9A5A5B"
                android:text="Log in"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginbtn"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:text="Switch Accounts"
                android:textColor="#9A5A5B"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/profilepic"
                android:layout_centerInParent="true"
                android:layout_marginBottom="60dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Socially"
                android:textColor="#8B3B3A"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="40dp"
                android:text="Don't have an account?  "
                android:textColor="#9A5A5B" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_above="@id/text1"
                android:background="@drawable/line"
                android:backgroundTint="#ECECEC"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/line"
                />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/text1"
                android:layout_toEndOf="@+id/text1"
                android:text="Sign up"
                android:textColor="#9A5A5B"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
