<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/splash"
    >

    <!--logo-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/socially_logo"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        />

    <!--from SMD-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="from"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:textSize="25dp"
        android:layout_centerInParent="true"
        android:textColor="#7D8587"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SMD"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textSize="60dp"
        android:layout_marginBottom="20dp"
        android:textColor="#913C42"
        android:textStyle="bold"
        />


</RelativeLayout>