...
        android:layout_above="@id/tabbar"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingBottom="80dp">

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/acc1"
                android:layout_width="80dp"
...
